# onnx_testing

./: CMakeLists.txt  README.md  detector.cpp  main.cpp
include/: detector.h
samples/models/: rudy.names
